--- a/components/Makefile
+++ b/components/Makefile
@@ -7,6 +7,7 @@ CMOCK_DIR = ../cmock
 
 SRC_DIR := ./components/**/src
 INCLUDE_DIR := ./components/api/include
+CJSON_DIR := C:\msys32\home\Jamie\esp-idf\components\json\cJSON 
 BUILD_DIR ?= ./build
 TEST_BUILD_DIR = $(BUILD_DIR)/test
 TEST_MAKEFILE = $(TEST_BUILD_DIR)/MakefileTestSupport
