--- a/components/Makefile
+++ b/components/Makefile
@@ -2,12 +2,12 @@
 
 CLEANUP = rm -Rf
 
-UNITY_ROOT = ../Unity
-CMOCK_DIR = ../cmock
+#UNITY_ROOT = ../Unity
+#CMOCK_DIR = ../cmock
 
 SRC_DIR := ./components/**/src
 INCLUDE_DIR := ./components/api/include
-CJSON_DIR := C:\msys32\home\Jamie\esp-idf\components\json\cJSON 
+#CJSON_DIR := C:\msys32\home\Jamie\esp-idf\components\json\cJSON 
 BUILD_DIR ?= ./build
 TEST_BUILD_DIR = $(BUILD_DIR)/test
 TEST_MAKEFILE = $(TEST_BUILD_DIR)/MakefileTestSupport
