--- a/main/resources/config.json
+++ b/main/resources/config.json
@@ -1,1 +1,24 @@
-
+{
+    "state": {
+      "connectedClients": 1,
+      "headLightsOn": true,
+      "parkLightsOn": true,
+      "airConOn": true
+    },
+    "update": {
+      "latestBuild": 999,
+      "overGsm": true,
+      "ssid": "ssid",
+      "password": "password",
+      "host": "storage.googleapis.com",
+      "port": 80,
+      "path": "/espimages/develop/",
+      "forceUpdate": true
+    },
+    "carConnection": {
+      "ssid": "REMOTE123456",
+      "password": "abcde123456",
+      "host": "192.168.8.46",
+      "port": 8080
+    }
+  }
