added back some tests

--- a/main/resources/config.json
+++ b/main/resources/config.json
@@ -1,7 +1,7 @@
 {
     "state": {
       "connectedClients": 1,
-      "headLightsOn": true,
+      "headLightsOn": false,
       "parkLightsOn": true,
       "airConOn": true
     },
