--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA', '-t',''gcr.io/$PROJECT_ID/$REPO_NAME:latest','.' ]
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA', '-t','gcr.io/$PROJECT_ID/$REPO_NAME:latest','.' ]
 images:
 - 'gcr.io/$PROJECT_ID/phev-esp'
 timeout: 2000s
