--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .vscode
 build
 *.old
-*.txt
 *.o
 *.d
 test1.exe
@@ -10,4 +9,4 @@ linux
 phev
 components/messaging/test/*_Runner.c
 main/resources/phev-config-update.json
-!/registration.txt
+notes.txt
