removed cmke requires & renamed setup ui

--- a/components/gcp_jwt/CMakeLists.txt
+++ b/components/gcp_jwt/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 set(COMPONENT_SRCDIRS "./src")
 set(COMPONENT_ADD_INCLUDEDIRS "./src/include")
-
+set(COMPONENT_EMBED_TXTFILES "../../main/resources/rsa_private2.pem")
 
 set(COMPONENT_REQUIRES libjwt logger)
 
