--- a/components/wifi_client/CMakeLists.txt
+++ b/components/wifi_client/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(COMPONENT_SRCDIRS "./src")
 set(COMPONENT_ADD_INCLUDEDIRS "./src/include")
 
-set(COMPONENT_REQUIRES setup_ui mdns)
+set(COMPONENT_REQUIRES phev_setup mdns)
 register_component()
