setup working over ap

--- a/components/phev_setup/CMakeLists.txt
+++ b/components/phev_setup/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(COMPONENT_SRCDIRS "./src")
 set(COMPONENT_ADD_INCLUDEDIRS "./src/include")
 
-set(COMPONENT_REQUIRES nvs_flash esp_http_server)
+set(COMPONENT_REQUIRES nvs_flash esp_http_server phev_core wifi_client ppp_client)
+
+set(COMPONENT_EMBED_TXTFILES "./resources/phev-remote-config.html")
 
 register_component()
