--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 set(COMPONENT_SRCDIRS "./src")
 
-set(COMPONENT_REQUIRES wifi_client nvs_flash mdns phev_app msg_core)
+set(COMPONENT_REQUIRES wifi_client nvs_flash mdns phev_app msg_core phev_setup)
 
 register_component()
