changed http header and uri len size

--- a/components/phev_setup/resources/config.json
+++ b/components/phev_setup/resources/config.json
@@ -1,7 +1,7 @@
 {
     "carConnection": {
-        "ssid": "BTHub6-P535",
-        "password": "S1mpsons"
+        "ssid": "REMOTE45cfsc",
+        "password": "fhcm852767"
     },
     "pppConnection": {
         "user": "eesecure",
