--- a/components/phev_core/CMakeLists.txt
+++ b/components/phev_core/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(COMPONENT_SRCDIRS "./src")
 set(COMPONENT_ADD_INCLUDEDIRS "./src/include")
 
-set(COMPONENT_REQUIRES phev_ota msg_core json)
+set(COMPONENT_REQUIRES phev_store phev_ota msg_core json)
 register_component()
