configuration of topic

--- a/components/msg_core/CMakeLists.txt
+++ b/components/msg_core/CMakeLists.txt
@@ -1,7 +1,6 @@
 set(COMPONENT_SRCDIRS "./src")
 set(COMPONENT_ADD_INCLUDEDIRS "./src/include")
 
-set(COMPONENT_REQUIRES logger)
-
+set(COMPONENT_REQUIRES logger gcp_jwt)
 
 register_component()
