--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,9 @@ else()
     message("Build number not defined defaulting to 1 and turning off OTA")
     add_definitions(-DBUILD_NUMBER=1 -DNO_OTA)
 endif()
+
+add_definitions(-DHEADER_BUFFER=2048)
+add_definitions(-DDEFAULT_HTTP_BUF_SIZE=2048)
+add_definitions(-DMAX_HTTP_RECV_BUFFER=2048)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(phev-esp)
