--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 set(COMPONENT_SRCDIRS "./src")
 
+set(COMPONENT_ADD_INCLUDEDIRS "./include")
+
 set(COMPONENT_REQUIRES wifi_client nvs_flash mdns phev_app msg_core phev_setup phev_store)
 
 register_component()
